--- a/FXMLDocument.fxml
+++ b/FXMLDocument.fxml
@@ -12,50 +12,47 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" nodeOrientation="LEFT_TO_RIGHT" prefHeight="800.0" prefWidth="1500.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pkginterface.FXMLDocumentController">
+<AnchorPane id="AnchorPane" fx:id="ap2" nodeOrientation="LEFT_TO_RIGHT" prefHeight="800.0" prefWidth="1500.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.FXMLDocumentController">
    <children>
-      <Pane layoutX="244.0" prefHeight="145.0" prefWidth="1256.0" styleClass="head-background" stylesheets="@style.css" AnchorPane.leftAnchor="244.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Pane layoutX="231.0" prefHeight="136.0" prefWidth="1269.0" style="-fx-background-color: #333333;" styleClass="head-background" stylesheets="@style.css" AnchorPane.leftAnchor="231.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label layoutX="456.0" layoutY="61.0" text="ISchool " textFill="WHITE">
+            <Label layoutX="480.0" layoutY="40.0" prefHeight="41.0" prefWidth="240.0" text="ISchool " textFill="WHITE">
                <font>
-                  <Font size="36.0" />
+                  <Font name="Georgia Bold Italic" size="50.0" />
                </font>
             </Label>
-            <JFXButton layoutX="1054.0" layoutY="99.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="163.0" ripplerFill="#2c5161" style="-fx-background-color: #ccf2ff;" text="deconnecter" textFill="#434242">
+            <JFXButton fx:id="deco" layoutX="1054.0" layoutY="99.0" nodeOrientation="RIGHT_TO_LEFT" onAction="#deco" prefHeight="30.0" prefWidth="163.0" ripplerFill="#2c5161" style="-fx-background-color: #FFFFFF;" text="deconnecter" textFill="#434242">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <ImageView fitHeight="129.0" fitWidth="126.0" layoutX="49.0" layoutY="8.0">
+            <ImageView fitHeight="129.0" fitWidth="126.0" layoutX="22.0" layoutY="4.0">
                <image>
-                  <Image url="@logo.png" />
+                  <Image url="@../Images/logo.png" />
                </image>
             </ImageView>
          </children>
       </Pane>
       <HBox layoutX="251.0" layoutY="145.0" prefHeight="30.0" prefWidth="810.0" AnchorPane.leftAnchor="251.0" AnchorPane.rightAnchor="1.0" />
-      <VBox prefHeight="801.0" prefWidth="232.0" style="-fx-background-color: #266382;">
+      <VBox prefHeight="801.0" prefWidth="232.0" style="-fx-background-color: #333333;">
          <children>
             <AnchorPane prefHeight="156.0" prefWidth="249.0">
                <children>
-                  <ImageView fitHeight="116.0" fitWidth="126.0" layoutX="66.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="116.0" fitWidth="126.0" layoutX="66.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@me.jpg" />
+                        <Image url="@../Images/me.jpg" />
                      </image>
                   </ImageView>
-                  <Separator layoutX="236.0" layoutY="3.0" orientation="VERTICAL" prefHeight="136.0" prefWidth="13.0" style="-fx-background-color: #2c5161;" />
+                  <Label fx:id="nomm" layoutX="157.0" layoutY="132.0" prefHeight="21.0" prefWidth="74.0" text="Label" textFill="WHITE" />
+                  <Label layoutX="-2.0" layoutY="132.0" prefHeight="21.0" prefWidth="156.0" text="Connecté en tant que :" textFill="WHITE" />
                </children>
             </AnchorPane>
-            <JFXButton prefHeight="50.0" prefWidth="220.0" style="-fx-background-color: #ccf2ff;">
+            <JFXButton fx:id="etudbtn" onAction="#etudbtn" prefHeight="39.0" prefWidth="220.0" style="-fx-background-color: #333333;">
                <graphic>
-                  <Label text="Gestion Etudiant">
-                     <graphic>
-                        <ImageView fitHeight="40.0" fitWidth="40.0">
-                           <image>
-                              <Image url="@StudentMgmt.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <Label alignment="CENTER" text=" Etudiant" textAlignment="CENTER" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold Italic" size="16.0" />
+                     </font>
                   </Label>
                </graphic>
                <VBox.margin>
@@ -67,16 +64,12 @@
                   <Insets left="7.0" right="10.0" />
                </VBox.margin>
             </Separator>
-            <JFXButton prefHeight="50.0" prefWidth="220.0" style="-fx-background-color: #ccf2ff;">
+            <JFXButton fx:id="prnt" onAction="#prnt" prefHeight="37.0" prefWidth="220.0" style="-fx-background-color: #333333;">
                <graphic>
-                  <Label text="Parent">
-                     <graphic>
-                        <ImageView fitHeight="40.0" fitWidth="40.0">
-                           <image>
-                              <Image url="@StaffMgmt.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <Label text="Parent" textAlignment="CENTER" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold Italic" size="15.0" />
+                     </font>
                   </Label>
                </graphic>
                <VBox.margin>
@@ -88,16 +81,12 @@
                   <Insets left="7.0" right="10.0" />
                </VBox.margin>
             </Separator>
-            <JFXButton prefHeight="50.0" prefWidth="220.0" style="-fx-background-color: #ccf2ff;">
+            <JFXButton fx:id="btnEnseig" onAction="#btnEnseig" prefHeight="42.0" prefWidth="220.0" style="-fx-background-color: #333333;">
                <graphic>
-                  <Label text="Enseignant">
-                     <graphic>
-                        <ImageView fitHeight="40.0" fitWidth="40.0">
-                           <image>
-                              <Image url="@ManageStudent.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <Label text="Enseignant" textAlignment="CENTER" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold Italic" size="15.0" />
+                     </font>
                   </Label>
                </graphic>
                <VBox.margin>
@@ -109,16 +98,12 @@
                   <Insets left="7.0" right="10.0" />
                </VBox.margin>
             </Separator>
-            <JFXButton prefHeight="50.0" prefWidth="220.0" style="-fx-background-color: #ccf2ff;">
+            <JFXButton prefHeight="41.0" prefWidth="220.0" style="-fx-background-color: #333333;">
                <graphic>
-                  <Label text="Foyer">
-                     <graphic>
-                        <ImageView fitHeight="40.0" fitWidth="40.0">
-                           <image>
-                              <Image url="@SchoolInfo.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <Label text="Foyer" textAlignment="CENTER" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold Italic" size="15.0" />
+                     </font>
                   </Label>
                </graphic>
                <VBox.margin>
@@ -130,16 +115,12 @@
                   <Insets left="7.0" right="10.0" />
                </VBox.margin>
             </Separator>
-            <JFXButton prefHeight="50.0" prefWidth="220.0" style="-fx-background-color: #ccf2ff;">
+            <JFXButton prefHeight="41.0" prefWidth="254.0" style="-fx-background-color: #333333;" text="Button">
                <graphic>
-                  <Label style="-fx-background-color: #ccf2ff;" text="Reclamation">
-                     <graphic>
-                        <ImageView fitHeight="40.0" fitWidth="40.0">
-                           <image>
-                              <Image url="@LibraryMgmt.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <Label contentDisplay="RIGHT" style="-fx-background-color: #333333;" text="Reclamation" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold Italic" size="15.0" />
+                     </font>
                   </Label>
                </graphic>
                <VBox.margin>
@@ -151,16 +132,12 @@
                   <Insets left="7.0" right="10.0" />
                </VBox.margin>
             </Separator>
-            <JFXButton prefHeight="50.0" prefWidth="220.0" style="-fx-background-color: #ccf2ff;">
+            <JFXButton fx:id="cantinee" onAction="#gosee" prefHeight="39.0" prefWidth="220.0" style="-fx-background-color: #333333;">
                <graphic>
-                  <Label text="Contine">
-                     <graphic>
-                        <ImageView fitHeight="40.0" fitWidth="40.0">
-                           <image>
-                              <Image url="@InventoryMgmt.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <Label text="Cantine" textAlignment="CENTER" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold Italic" size="16.0" />
+                     </font>
                   </Label>
                </graphic>
                <VBox.margin>
@@ -172,16 +149,12 @@
                   <Insets left="7.0" right="10.0" />
                </VBox.margin>
             </Separator>
-            <JFXButton prefHeight="50.0" prefWidth="220.0" style="-fx-background-color: #ccf2ff;">
+            <JFXButton prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #333333;">
                <graphic>
-                  <Label text="Evenement">
-                     <graphic>
-                        <ImageView fitHeight="40.0" fitWidth="40.0">
-                           <image>
-                              <Image url="@NoticeMgmt.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <Label text="Evenement" textAlignment="CENTER" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold Italic" size="16.0" />
+                     </font>
                   </Label>
                </graphic>
                <VBox.margin>
@@ -193,16 +166,12 @@
                   <Insets left="7.0" right="10.0" />
                </VBox.margin>
             </Separator>
-            <JFXButton prefHeight="50.0" prefWidth="220.0" style="-fx-background-color: #ccf2ff;">
+            <JFXButton prefHeight="41.0" prefWidth="220.0" style="-fx-background-color: #333333;">
                <graphic>
-                  <Label text="Club">
-                     <graphic>
-                        <ImageView fitHeight="40.0" fitWidth="40.0">
-                           <image>
-                              <Image url="@UserMgmt.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <Label text="Club" textAlignment="CENTER" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold Italic" size="16.0" />
+                     </font>
                   </Label>
                </graphic>
                <VBox.margin>
@@ -214,16 +183,12 @@
                   <Insets left="7.0" right="10.0" />
                </VBox.margin>
             </Separator>
-            <JFXButton prefHeight="50.0" prefWidth="220.0" style="-fx-background-color: #ccf2ff;">
+            <JFXButton prefHeight="45.0" prefWidth="220.0" style="-fx-background-color: #333333;">
                <graphic>
-                  <Label text="Emploi du temps ">
-                     <graphic>
-                        <ImageView fitHeight="40.0" fitWidth="40.0">
-                           <image>
-                              <Image url="@EventMgmt.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <Label text="Emploi du temps " textAlignment="CENTER" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold Italic" size="16.0" />
+                     </font>
                   </Label>
                </graphic>
                <VBox.margin>
@@ -235,16 +200,12 @@
                   <Insets left="5.0" right="10.0" />
                </VBox.margin>
             </Separator>
-            <JFXButton prefHeight="50.0" prefWidth="220.0" style="-fx-background-color: #ccf2ff;">
+            <JFXButton prefHeight="38.0" prefWidth="220.0" style="-fx-background-color: #333333;">
                <graphic>
-                  <Label text="Notes et Absence">
-                     <graphic>
-                        <ImageView fitHeight="40.0" fitWidth="40.0">
-                           <image>
-                              <Image url="@ExamMgmt.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <Label text="Notes" textAlignment="CENTER" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold Italic" size="16.0" />
+                     </font>
                   </Label>
                </graphic>
                <VBox.margin>
@@ -256,8 +217,19 @@
                   <Insets left="7.0" right="10.0" />
                </VBox.margin>
             </Separator>
+            <JFXButton prefHeight="19.0" prefWidth="231.0" text="Absences" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="System Bold Italic" size="16.0" />
+               </font>
+            </JFXButton>
+            <Separator prefHeight="10.0" prefWidth="180.0" />
+            <JFXButton prefHeight="52.0" prefWidth="232.0" text="Payement" textFill="WHITE">
+               <font>
+                  <Font name="System Bold Italic" size="16.0" />
+               </font>
+            </JFXButton>
          </children>
       </VBox>
-      <Pane fx:id="mainpane" layoutX="249.0" layoutY="145.0" prefHeight="655.0" prefWidth="1248.0" AnchorPane.bottomAnchor="10.0" />
+      <Pane fx:id="mainpane" layoutX="231.0" layoutY="136.0" prefHeight="660.0" prefWidth="1250.0" AnchorPane.bottomAnchor="5.0" />
    </children>
 </AnchorPane>
