--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 .head-background
 {
-    -fx-background-color: linear-gradient(to left,  #266382
- ,  #266382
-);
+    -fx-background-color: linear-gradient(to left,  #333333
+#333333);
 }
